--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2106,4 +2106,6 @@
     <string name="model_dat_3x">ارتقاء 3 برابری با استفاده از معماری پیشرفته ترانسفورماتور، ایده آل برای نیازهای بزرگنمایی متوسط.</string>
     <string name="model_dat_4x">ارتقاء 4 برابری با کیفیت بالا با شبکه ترانسفورماتور پیشرفته، جزئیات دقیق را در مقیاس های بزرگتر حفظ می کند.</string>
     <string name="model_nafnet_deblurring">تاری/نویز و لرزش را از عکس ها حذف می کند. هدف کلی اما بهترین در عکس.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">تصاویر با کیفیت پایین را با استفاده از ترانسفورماتور Swin2SR که برای تخریب BSRGAN بهینه شده است، بازیابی می کند. برای تثبیت مصنوعات فشرده سازی سنگین و بهبود جزئیات در مقیاس 4 برابر عالی است.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">ارتقاء 4 برابری با ترانسفورماتور SwinIR آموزش دیده در مورد تخریب BSRGAN. از GAN برای بافت های واضح تر و جزئیات طبیعی تر در عکس ها و صحنه های پیچیده استفاده می کند.</string>
 </resources>
