--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2106,4 +2106,6 @@
     <string name="model_dat_3x">उन्नत ट्रांसफॉर्मर आर्किटेक्चर का उपयोग करके 3x अपस्केलिंग, मध्यम विस्तार आवश्यकताओं के लिए आदर्श।</string>
     <string name="model_dat_4x">अत्याधुनिक ट्रांसफार्मर नेटवर्क के साथ 4x उच्च-गुणवत्ता वाला अपस्केलिंग, बड़े पैमाने पर बारीक विवरणों को संरक्षित करता है।</string>
     <string name="model_nafnet_deblurring">फ़ोटो से धुंधलापन/शोर और कंपन हटाता है। सामान्य प्रयोजन लेकिन तस्वीरों में सर्वोत्तम।</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN गिरावट के लिए अनुकूलित Swin2SR ट्रांसफार्मर का उपयोग करके निम्न-गुणवत्ता वाली छवियों को पुनर्स्थापित करता है। भारी संपीड़न कलाकृतियों को ठीक करने और 4x पैमाने पर विवरण बढ़ाने के लिए बढ़िया।</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">बीएसआरजीएएन गिरावट पर प्रशिक्षित स्विनआईआर ट्रांसफार्मर के साथ 4x अपस्केलिंग। फ़ोटो और जटिल दृश्यों में तेज़ बनावट और अधिक प्राकृतिक विवरण के लिए GAN का उपयोग करता है।</string>
 </resources>
