--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2106,4 +2106,6 @@
     <string name="model_dat_3x">ਉੱਨਤ ਟ੍ਰਾਂਸਫਾਰਮਰ ਆਰਕੀਟੈਕਚਰ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹੋਏ 3x ਅਪਸਕੇਲਿੰਗ, ਮੱਧਮ ਵਾਧੇ ਦੀਆਂ ਲੋੜਾਂ ਲਈ ਆਦਰਸ਼।</string>
     <string name="model_dat_4x">ਅਤਿ-ਆਧੁਨਿਕ ਟਰਾਂਸਫਾਰਮਰ ਨੈਟਵਰਕ ਦੇ ਨਾਲ 4x ਉੱਚ-ਗੁਣਵੱਤਾ ਅਪਸਕੇਲਿੰਗ, ਵੱਡੇ ਪੈਮਾਨੇ \'ਤੇ ਵਧੀਆ ਵੇਰਵਿਆਂ ਨੂੰ ਸੁਰੱਖਿਅਤ ਰੱਖਦੀ ਹੈ।</string>
     <string name="model_nafnet_deblurring">ਫੋਟੋਆਂ ਤੋਂ ਧੁੰਦਲਾ/ਸ਼ੋਰ ਅਤੇ ਹਿੱਲਣ ਨੂੰ ਹਟਾਉਂਦਾ ਹੈ। ਆਮ ਮਕਸਦ ਪਰ ਫੋਟੋਆਂ \'ਤੇ ਵਧੀਆ।</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN ਡਿਗਰੇਡੇਸ਼ਨ ਲਈ ਅਨੁਕੂਲਿਤ, Swin2SR ਟ੍ਰਾਂਸਫਾਰਮਰ ਦੀ ਵਰਤੋਂ ਕਰਦੇ ਹੋਏ ਘੱਟ-ਗੁਣਵੱਤਾ ਵਾਲੀਆਂ ਤਸਵੀਰਾਂ ਨੂੰ ਰੀਸਟੋਰ ਕਰਦਾ ਹੈ। ਭਾਰੀ ਸੰਕੁਚਨ ਕਲਾਤਮਕ ਚੀਜ਼ਾਂ ਨੂੰ ਫਿਕਸ ਕਰਨ ਅਤੇ 4x ਸਕੇਲ \'ਤੇ ਵੇਰਵਿਆਂ ਨੂੰ ਵਧਾਉਣ ਲਈ ਵਧੀਆ।</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN ਡਿਗਰੇਡੇਸ਼ਨ \'ਤੇ ਸਿਖਲਾਈ ਪ੍ਰਾਪਤ ਸਵਿਨਆਈਆਰ ਟ੍ਰਾਂਸਫਾਰਮਰ ਨਾਲ 4x ਅਪਸਕੇਲਿੰਗ। ਫੋਟੋਆਂ ਅਤੇ ਗੁੰਝਲਦਾਰ ਦ੍ਰਿਸ਼ਾਂ ਵਿੱਚ ਤਿੱਖੇ ਟੈਕਸਟ ਅਤੇ ਹੋਰ ਕੁਦਰਤੀ ਵੇਰਵਿਆਂ ਲਈ GAN ਦੀ ਵਰਤੋਂ ਕਰਦਾ ਹੈ।</string>
 </resources>
