--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2106,4 +2106,6 @@
     <string name="model_dat_3x">மேம்பட்ட மின்மாற்றி கட்டமைப்பைப் பயன்படுத்தி 3x உயர்த்துதல், மிதமான விரிவாக்கத் தேவைகளுக்கு ஏற்றது.</string>
     <string name="model_dat_4x">அதிநவீன மின்மாற்றி நெட்வொர்க்குடன் 4x உயர்தர மேம்பாடு, பெரிய அளவுகளில் சிறந்த விவரங்களைப் பாதுகாக்கிறது.</string>
     <string name="model_nafnet_deblurring">படங்களிலிருந்து மங்கல்/சத்தம் மற்றும் குலுக்கல்களை நீக்குகிறது. பொதுவான நோக்கம் ஆனால் புகைப்படங்களில் சிறந்தது.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR மின்மாற்றியைப் பயன்படுத்தி குறைந்த தரமான படங்களை மீட்டமைக்கிறது, BSRGAN சிதைவுக்கு உகந்தது. கனமான சுருக்க கலைப்பொருட்களை சரிசெய்வதற்கும், விவரங்களை 4x அளவில் மேம்படுத்துவதற்கும் சிறந்தது.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN சிதைவு குறித்து பயிற்சியளிக்கப்பட்ட SwinIR மின்மாற்றியுடன் 4x உயர்நிலை. புகைப்படங்கள் மற்றும் சிக்கலான காட்சிகளில் கூர்மையான அமைப்பு மற்றும் இயற்கையான விவரங்களுக்கு GAN ஐப் பயன்படுத்துகிறது.</string>
 </resources>
