--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2105,4 +2105,6 @@
     <string name="model_dat_3x">การขยายขนาด 3 เท่าโดยใช้สถาปัตยกรรมหม้อแปลงขั้นสูง เหมาะสำหรับความต้องการในการขยายระดับปานกลาง</string>
     <string name="model_dat_4x">การเพิ่มสเกลคุณภาพสูง 4 เท่าด้วยเครือข่ายหม้อแปลงที่ล้ำสมัย ช่วยรักษารายละเอียดเล็กๆ น้อยๆ ในสเกลที่ใหญ่ขึ้น</string>
     <string name="model_nafnet_deblurring">ลบภาพเบลอ/นอยส์ และความสั่นออกจากภาพถ่าย วัตถุประสงค์ทั่วไป แต่ดีที่สุดในภาพถ่าย</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">คืนค่าอิมเมจคุณภาพต่ำโดยใช้หม้อแปลง Swin2SR ซึ่งได้รับการปรับให้เหมาะสมสำหรับการย่อยสลาย BSRGAN เหมาะสำหรับการแก้ไขส่วนบีบอัดขนาดใหญ่และเพิ่มรายละเอียดในระดับ 4x</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">การเพิ่มสเกล 4 เท่าด้วยหม้อแปลง SwinIR ที่ได้รับการฝึกเรื่องการย่อยสลาย BSRGAN ใช้ GAN เพื่อให้พื้นผิวคมชัดขึ้นและรายละเอียดที่เป็นธรรมชาติมากขึ้นในภาพถ่ายและฉากที่ซับซ้อน</string>
 </resources>
