--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2127,4 +2127,6 @@
     <string name="model_dat_3x">3x upscaling using advanced transformer architecture, ideal for moderate enlargement needs.</string>
     <string name="model_dat_4x">4x high-quality upscaling with state-of-the-art transformer network, preserves fine details at larger scales.</string>
     <string name="model_nafnet_deblurring">Removes blur/noise and shakes from photos. General purpose but best on photos.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">Restores low-quality images using Swin2SR transformer, optimized for BSRGAN degradation. Great for fixing heavy compression artifacts and enhancing details at 4x scale.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">4x upscaling with SwinIR transformer trained on BSRGAN degradation. Uses GAN for sharper textures and more natural details in photos and complex scenes.</string>
 </resources>
