--- a/core/resources/src/main/res/values-fi/strings.xml
+++ b/core/resources/src/main/res/values-fi/strings.xml
@@ -2106,4 +2106,6 @@
     <string name="model_dat_3x">3x skaalaus edistyneellä muuntajaarkkitehtuurilla, ihanteellinen kohtalaisiin laajennustarpeisiin.</string>
     <string name="model_dat_4x">4x korkealaatuinen skaalaus huippuluokan muuntajaverkolla, säilyttää hienot yksityiskohdat suuremmissa mittakaavaissa.</string>
     <string name="model_nafnet_deblurring">Poistaa kuvista epäterävyyttä/kohinaa ja tärinää. Yleiskäyttöinen, mutta paras kuvissa.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">Palauttaa huonolaatuiset kuvat käyttämällä Swin2SR-muuntajaa, joka on optimoitu BSRGANin heikkenemistä varten. Erinomainen raskaiden puristusartefaktien korjaamiseen ja yksityiskohtien parantamiseen 4x mittakaavassa.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">4-kertainen skaalaus SwinIR-muuntajalla, joka on koulutettu BSRGANin heikkenemiseen. Käyttää GAN-tekniikkaa terävämpiin tekstuuriin ja luonnollisempiin yksityiskohtiin valokuvissa ja monimutkaisissa kohtauksissa.</string>
 </resources>
