--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2106,4 +2106,6 @@
     <string name="model_dat_3x">Трансформатордың жетілдірілген архитектурасын пайдаланып масштабты 3 есе арттыру, қалыпты үлкейту қажеттіліктері үшін өте қолайлы.</string>
     <string name="model_dat_4x">Соңғы үлгідегі трансформатор желісімен 4 есе жоғары сапалы масштабтау, үлкенірек масштабта ұсақ бөлшектерді сақтайды.</string>
     <string name="model_nafnet_deblurring">Фотосуреттердегі бұлыңғырлықты/ шуды және дірілдерді жояды. Жалпы мақсат, бірақ фотосуреттерде жақсы.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">BSRGAN деградациясы үшін оңтайландырылған Swin2SR трансформаторын пайдаланып сапасыз кескіндерді қалпына келтіреді. Ауыр қысу артефактілерін бекіту және 4x масштабындағы мәліметтерді жақсарту үшін тамаша.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN деградациясына үйретілген SwinIR трансформаторымен 4 есе кеңейту. Фотосуреттер мен күрделі көріністердегі анық текстуралар мен табиғи бөлшектер үшін GAN пайдаланады.</string>
 </resources>
