--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2107,4 +2107,6 @@
     <string name="model_dat_3x">प्रगत ट्रान्सफॉर्मर आर्किटेक्चरचा वापर करून 3x अपस्केलिंग, मध्यम विस्तार गरजांसाठी आदर्श.</string>
     <string name="model_dat_4x">अत्याधुनिक ट्रान्सफॉर्मर नेटवर्कसह 4x उच्च-गुणवत्तेचे अपस्केलिंग, मोठ्या प्रमाणात सूक्ष्म तपशील जतन करते.</string>
     <string name="model_nafnet_deblurring">फोटोंमधून अस्पष्टता/आवाज आणि शेक काढून टाकते. सामान्य हेतू परंतु फोटोंसाठी सर्वोत्तम.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ट्रान्सफॉर्मर वापरून कमी-गुणवत्तेच्या प्रतिमा पुनर्संचयित करते, BSRGAN डिग्रेडेशनसाठी ऑप्टिमाइझ केलेले. हेवी कॉम्प्रेशन आर्टिफॅक्ट्स निश्चित करण्यासाठी आणि 4x स्केलवर तपशील वाढविण्यासाठी उत्तम.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN डिग्रेडेशनवर प्रशिक्षित स्विनआयआर ट्रान्सफॉर्मरसह 4x अपस्केलिंग. फोटो आणि जटिल दृश्यांमध्ये तीक्ष्ण पोत आणि अधिक नैसर्गिक तपशीलांसाठी GAN वापरते.</string>
 </resources>
