--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2108,4 +2108,6 @@
     <string name="model_dat_3x">3-кратное масштабирование с использованием усовершенствованной архитектуры трансформатора, идеально подходящее для умеренных потребностей в расширении.</string>
     <string name="model_dat_4x">Четырехкратное высококачественное масштабирование с использованием современной трансформаторной сети сохраняет мелкие детали в больших масштабах.</string>
     <string name="model_nafnet_deblurring">Удаляет размытие/шум и дрожание фотографий. Общего назначения, но лучше всего на фотографиях.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">Восстанавливает изображения низкого качества с помощью преобразователя Swin2SR, оптимизированного для деградации BSRGAN. Отлично подходит для исправления сильных артефактов сжатия и улучшения деталей в 4-кратном масштабе.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">4-кратное масштабирование с помощью преобразователя SwinIR, обученного ухудшению BSRGAN. Использует GAN для получения более четких текстур и более естественных деталей на фотографиях и сложных сценах.</string>
 </resources>
