--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2107,4 +2107,6 @@
     <string name="model_dat_3x">උසස් ට්‍රාන්ස්ෆෝමර් ගෘහ නිර්මාණ ශිල්පය භාවිතයෙන් 3x ඉහළ නැංවීම, මධ්‍යස්ථ විශාල කිරීමේ අවශ්‍යතා සඳහා වඩාත් සුදුසුය.</string>
     <string name="model_dat_4x">අති නවීන ට්‍රාන්ස්ෆෝමර් ජාලය සමඟ 4x උසස් තත්ත්වයේ ඉහළ නැංවීම, විශාල පරිමාණයෙන් සියුම් තොරතුරු ආරක්ෂා කරයි.</string>
     <string name="model_nafnet_deblurring">ඡායාරූප වලින් නොපැහැදිලි/ශබ්ද සහ සෙලවීම් ඉවත් කරයි. සාමාන්‍ය අරමුණ නමුත් ඡායාරූප මත හොඳම.</string>
+    <string name="model_swin2sr_x4_bsrgan_psnr">Swin2SR ට්‍රාන්ස්ෆෝමරය භාවිතයෙන් අඩු ගුණාත්මක රූප ප්‍රතිසාධනය කරයි, BSRGAN හායනය සඳහා ප්‍රශස්ත කර ඇත. බර සම්පීඩන කෞතුක වස්තු සවි කිරීම සහ 4x පරිමාණයෙන් විස්තර වැඩි දියුණු කිරීම සඳහා විශිෂ්ටයි.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">BSRGAN හායනය පිළිබඳ පුහුණු කරන ලද SwinIR ට්‍රාන්ස්ෆෝමරය සමඟ 4x ඉහළ නැංවීම. ඡායාරූප සහ සංකීර්ණ දර්ශනවල තියුණු වයනය සහ වඩාත් ස්වාභාවික විස්තර සඳහා GAN භාවිතා කරයි.</string>
 </resources>
