--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2094,7 +2094,6 @@
     <string name="hidden_tools">Paslėpti įrankiai</string>
     <string name="hidden_for_share">Įrankiai, paslėpti bendrinimui</string>
     <string name="color_library">Spalvų biblioteka</string>
-    <string name="color_library_sub">Naršykite didelę spalvų kolekciją.</string>
     <string name="color_library_sub">Naršykite didelę spalvų kolekciją</string>
     <string name="model_fatality_deblur">Paryškina ir pašalina vaizdų susiliejimą išlaikant natūralias detales, idealiai tinka taisyti nesufokusuotas nuotraukas.</string>
     <string name="model_unresize_v3">Protingai atkuria vaizdus, ​​kurių dydis anksčiau buvo pakeistas, atkuriant prarastas detales ir tekstūras.</string>
@@ -2109,5 +2108,5 @@
     <string name="model_dat_4x">4x aukštos kokybės padidinimas naudojant moderniausią transformatorių tinklą, išsaugo smulkias detales esant didesniam masteliui.</string>
     <string name="model_nafnet_deblurring">Pašalina nuotraukų susiliejimą/triukšmą ir drebėjimą. Bendra paskirtis, bet geriausia nuotraukose.</string>
     <string name="model_swin2sr_x4_bsrgan_psnr">Atkuria žemos kokybės vaizdus naudojant Swin2SR transformatorių, optimizuotą BSRGAN degradacijai. Puikiai tinka tvirtinti stiprius suspaudimo artefaktus ir patobulinti detales 4 kartus.</string>
-    <string name="model_bsrgan_swinir_m_x4_gan">4x padidinimas naudojant SwinIR transformatorių, apmokytą BSRGAN degradacijai. Naudoja GAN, kad nuotraukose ir sudėtingose ​​scenose būtų ryškesnės tekstūros ir natūralesnės detalės.</string>
+    <string name="model_bsrgan_swinir_m_x4_gan">4x padidinimas naudojant SwinIR transformatorių, apmokytą BSRGAN degradacijai. Naudoja GAN, kad nuotraukose ir sudėtingose scenose būtų ryškesnės tekstūros ir natūralesnės detalės.</string>
 </resources>
