Added more info about images in pickers

--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1621,15 +1621,15 @@
     <string name="pdf_is_protected">PDF-файл защищён</string>
     <string name="operation_almost_complete">Операция почти завершена. Если вы отмените сейчас, потребуется начать сначала</string>
     <string name="sort_by_date_modified">Дата изменения</string>
-    <string name="sort_by_date_modified_reversed">Дата изменения (обратная)</string>
+    <string name="sort_by_date_modified_reversed">Дата изменения (наоборот)</string>
     <string name="sort_by_size">Размер</string>
-    <string name="sort_by_size_reversed">Размер (обратная)</string>
+    <string name="sort_by_size_reversed">Размер (наоборот)</string>
     <string name="sort_by_mime_type">Тип MIME</string>
-    <string name="sort_by_mime_type_reversed">Тип MIME (обратная)</string>
+    <string name="sort_by_mime_type_reversed">Тип MIME (наоборот)</string>
     <string name="sort_by_extension">Расширение</string>
-    <string name="sort_by_extension_reversed">Расширение (обратная)</string>
+    <string name="sort_by_extension_reversed">Расширение (наоборот)</string>
     <string name="sort_by_date_added">Дата добавления</string>
-    <string name="sort_by_date_added_reversed">Дата добавления (в обратном порядке)</string>
+    <string name="sort_by_date_added_reversed">Дата добавления (наоборот)</string>
     <string name="left_to_right">Слева направо</string>
     <string name="right_to_left">Справа налево</string>
     <string name="top_to_bottom">Сверху вниз</string>
